Attempt fixing build 7